--- a/os-workbench/kernel/Makefile
+++ b/os-workbench/kernel/Makefile
@@ -22,3 +22,12 @@ run2: image
 
 run4: image
 	qemu-system-i386 -smp 4 $(QEMU_FLAGS)
+
+gdb: image
+	@gdb -ex "target remote 127.0.0.1:1234" -ex "symbol $(BINARY).o"
+
+debug2: image
+	qemu-system-i386 -S -s -monitor telnet:127.0.0.1:1111,server,nowait -smp 2 -serial stdio -machine accel=kvm:tcg -drive format=raw,file=$(BINARY)
+
+debug4: image
+	qemu-system-i386 -S -s -monitor telnet:127.0.0.1:1111,server,nowait -smp 4 -serial stdio -machine accel=kvm:tcg -drive format=raw,file=$(BINARY)
